--- a/tools/items/formula-wizard/styles.css
+++ b/tools/items/formula-wizard/styles.css
@@ -20,6 +20,7 @@
     border-bottom: 1px solid;
 }
 
+/* Regular desktops */
 .fw-workbench-io-grid {
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -35,10 +36,19 @@
         grid-template-areas: ". .";
     }
 }
+
 /* Mobile */
 @media only screen and (max-width: 768px) {
     .fw-workbench-io-grid {
         grid-template-columns: 100%;
         grid-template-areas: ".";
     }
+}
+
+/* Manually forcing the formula values' forms to size their columns properly */
+.formula-value-input-form table td:first-child:not(:first-of-type) {
+    white-space: nowrap;
+}
+.formula-value-input-form table td:last-child:not(:first-of-type) {
+    width: 100%;
 }
