Added contributors base page, Improved home page, Added grids Update .gitignore, head-preloads.php, and 22 more files...

--- a/resources/NibblePoker/scss/nibblepoker.scss
+++ b/resources/NibblePoker/scss/nibblepoker.scss
@@ -23,6 +23,7 @@
 @import 'core/float';
 @import 'core/sizing';
 @import 'core/flex';
+@import 'core/grid';
 @import 'core/text';
 @import 'core/containers';
 @import 'core/display';
