--- a/resources/NibblePoker/scss/variables.scss
+++ b/resources/NibblePoker/scss/variables.scss
@@ -293,6 +293,8 @@ $border-base-radius: 5px;
 
 $margin-base-size: 1rem;
 
+$grid-gap-base-size: 1rem;
+
 $text-header-weight: 600;
 
 $size-sidebar: 15rem;
