--- a/resources/NibblePoker/scss/nibblepoker.scss
+++ b/resources/NibblePoker/scss/nibblepoker.scss
@@ -27,6 +27,7 @@
 @import 'core/text';
 @import 'core/containers';
 @import 'core/display';
+@import 'core/position';
 
 /* Core > Rounding */
 @import 'core/rounding/global';
