--- a/resources/NibblePoker/scss/core/text.scss
+++ b/resources/NibblePoker/scss/core/text.scss
@@ -98,4 +98,9 @@ s, .t-strikethrough, .t-strike {
 	text-transform: uppercase;
 }
 
+.t-nowrap {
+	white-space: nowrap;
+	text-wrap: nowrap;
+}
+
 // Other default shit
