--- a/resources/NibblePoker/scss/site/base.scss
+++ b/resources/NibblePoker/scss/site/base.scss
@@ -158,10 +158,19 @@ main {
 
 /* Site > Base > Main */
 
-main {
-	&.expanded {
-		border-left: 0;
-		border-radius: 0;
+
+@media only screen and (max-width: 768px) {
+	main {
+		border-left: 0 !important;
+		border-radius: 0 !important;
+	}
+}
+@media only screen and (min-width: 768px) {
+	main {
+		&.expanded {
+			border-left: 0;
+			border-radius: 0;
+		}
 	}
 }
 
