--- a/resources/NibblePoker/scss/site/scrollbar.scss
+++ b/resources/NibblePoker/scss/site/scrollbar.scss
@@ -23,51 +23,51 @@
 	overflow-x: scroll;
 }
 
-@media (min-width: 769px) {
-	*::-webkit-scrollbar {
-		width: #{$scrollbar-size};
-		height: #{$scrollbar-size};
-		background-color: transparent;
-	}
-	*::-webkit-scrollbar-track:vertical {
-		border-left: 1px solid #{$color-scrollbar-border};
-	}
-	*::-webkit-scrollbar-track:horizontal {
-		border-top: 1px solid #{$color-scrollbar-border};
-	}
-	*::-webkit-scrollbar-thumb {
-		background-color: rgba(255, 255, 255, 0.25);
-		border: 0.4rem solid transparent;
-		background-clip: content-box;
-		border-radius: 1em;
-	}
-	*::-webkit-scrollbar-thumb:hover {
-		background-color: rgba(255, 255, 255, 0.4);
-		border-color: transparent;
-	}
-	*::-webkit-scrollbar-corner {
-		background-color: transparent;
-		border-left: 1px solid rgba(0, 0, 0, 0.1);
-		border-top: 1px solid rgba(0, 0, 0, 0.1);
-	}
-	
-	//* {
-	//	scrollbar-width: thin;
-	//	scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
-	//}
-	//*::-webkit-scrollbar-track {
-	//	border-color: rgba(255, 255, 255, 0.05);
-	//}
-	//*::-webkit-scrollbar-corner {
-	//	background-color: transparent;
-	//	border-color: rgba(255, 255, 255, 0.05);
-	//}
-	//* {
-	//	scrollbar-color: rgba(255, 255, 255, 0.25) #25282c;
-	//}
+//@media (min-width: 769px) {
+*::-webkit-scrollbar {
+	width: #{$scrollbar-size};
+	height: #{$scrollbar-size};
+	background-color: transparent;
 }
-/*
-.hide-scrollbar {
+*::-webkit-scrollbar-track:vertical {
+	border-left: 1px solid #{$color-scrollbar-border};
+}
+/**::-webkit-scrollbar-track:horizontal {
+	border-top: 1px solid #{$color-scrollbar-border};
+}*/
+*::-webkit-scrollbar-thumb {
+	background-color: rgba(255, 255, 255, 0.25);
+	border: 0.4rem solid transparent;
+	background-clip: content-box;
+	border-radius: 1em;
+}
+*::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(255, 255, 255, 0.4);
+	border-color: transparent;
+}
+*::-webkit-scrollbar-corner {
+	background-color: transparent;
+	border-left: 1px solid rgba(0, 0, 0, 0.1);
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+//* {
+//	scrollbar-width: thin;
+//	scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
+//}
+//*::-webkit-scrollbar-track {
+//	border-color: rgba(255, 255, 255, 0.05);
+//}
+//*::-webkit-scrollbar-corner {
+//	background-color: transparent;
+//	border-color: rgba(255, 255, 255, 0.05);
+//}
+//* {
+//	scrollbar-color: rgba(255, 255, 255, 0.25) #25282c;
+//}
+//}
+
+/*.hide-scrollbar {
 	scrollbar-width: none !important;
 	-ms-overflow-style: none;
 	
