Added home page description, Added easter-egg .env file, Added zoom-in effect for Splide galleries Update .env, .gitignore, and 5 more files...

--- a/resources/NibblePoker/scss/site/image.scss
+++ b/resources/NibblePoker/scss/site/image.scss
@@ -62,9 +62,12 @@
 	}
 }
 
-
-.sidebar-entry > i {
-
+// Zoom-in effect for image galleries
+.splide li {
+	transition: all 0.20s ease-in-out;
+}
+.splide li:hover {
+	transform: scale(1.05);
 }
 
 //.align-v-t
