Added debug page, Improved Splide galleries Update .gitignore, composer.php, and 12 more files...

--- a/resources/NibblePoker/scss/nibblepoker.scss
+++ b/resources/NibblePoker/scss/nibblepoker.scss
@@ -1,10 +1,10 @@
 /*
  * -----------------------------------------------------------------------------
  * NibblePoker.lu CSS
- * Version: 0.0.3
- * Copyright, 2023 Bozet Herwin
+ * Version: I'm not counting anymore
+ * Copyright, 2023-2024 Bozet Herwin
  * -----------------------------------------------------------------------------
- * Source: https://github.com/aziascreations/Web-NibblePoker
+ * Source: https://github.com/NibblePoker/Web-NibblePoker
  * -----------------------------------------------------------------------------
  */
 
@@ -63,3 +63,4 @@
 @import 'site/content';  // Uses fixed sizes and floats
 @import 'site/video';
 @import 'site/modal';
+@import 'site/splide';
