--- a/resources/NibblePoker/scss/site/text.scss
+++ b/resources/NibblePoker/scss/site/text.scss
@@ -4,7 +4,7 @@
 
 /* Site > Text > Commons */
 
-p, a, h1, h2, h3, h4, h5, h6, td, th, .code, summary, label {
+p, a, h1, h2, h3, h4, h5, h6, td, th, code, .code, summary, label {
 	color: #{$color-text-regular-normal};
 }
 
