Added CircuitPython Custom FS stub, Fixed l10n bug in listings, Minor additions Update circuitpython-custom-fs.yml, sidebar.yml, and 13 more files...

--- a/templates/pages/tools_index.jinja
+++ b/templates/pages/tools_index.jinja
@@ -22,9 +22,9 @@
                          src="{{ url_for("static", filename=tool_data.metadata.index.image_url) }}"
                          alt="TODO">
                     <h3 class="mb-xs">
-                        {{ l10n(tool_data.metadata.index.title_key, tool_id, lang) }}
+                        {{ l10n(tool_data.metadata.index.title_key, tool_id, user_lang) }}
                     </h3>
-                    <p>{{ l10n(tool_data.metadata.index.preamble_key, tool_id, lang) }}</p>
+                    <p>{{ l10n(tool_data.metadata.index.preamble_key, tool_id, user_lang) }}</p>
                 </div>
             </a>
 
