--- a/templates/pages/project_index.jinja
+++ b/templates/pages/project_index.jinja
@@ -22,9 +22,9 @@
                          src="{{ url_for("static", filename=project_data.metadata.index.image_url) }}"
                          alt="TODO">
                     <h3 class="mb-xs">
-                        {{ l10n(project_data.metadata.index.title_key, project_id, lang) }}
+                        {{ l10n(project_data.metadata.index.title_key, project_id, user_lang) }}
                     </h3>
-                    <p>{{ l10n(project_data.metadata.index.preamble_key, project_id, lang) }}</p>
+                    <p>{{ l10n(project_data.metadata.index.preamble_key, project_id, user_lang) }}</p>
                 </div>
             </a>
 
