Implemented file drop inputs, Preparing more tools Update app.py, excel-password-remover.yml, and 30 more files...

--- a/templates/base_www.jinja
+++ b/templates/base_www.jinja
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/NibblePoker/IndevCSS/nibblepoker.min.css">
     <link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/Quantum/Quantum.min.css">
 
+    <link rel="stylesheet" href="{{ url_for("static", filename="resources/NibblePoker/css/extra.css") }}">
+
     {% block extra_stylesheets %}{% endblock %}
 
     <meta charset="UTF-8">
