--- a/templates/elements/code.jinja
+++ b/templates/elements/code.jinja
@@ -1,4 +1,8 @@
-<code class="code ox-auto w-full d-inline-block position-relative language-{{ code_language }}">
+{% if code_language is none %}
+    <code class="code ox-auto w-full d-inline-block position-relative">
+{% else %}
+    <code class="code ox-auto w-full d-inline-block position-relative language-{{ code_language }}">
+{% endif %}
     {% for code_line in code_lines %}
         <span class="code-line t-nowrap">{{ code_line }}</span><br>
     {% endfor %}
